	* If a destructor has been called then set the ptr field on the 
	  smokeqyoto_object struct to 0, and don't call methods on it again.
	* Renamed IsInstanceContained() as IsContainedInstance(), and only call
	  a destructor for instances where it is false, as the C++ side will
	  delete the instance.
	* Q_INIT_RESOURCE() now correctly finds the resource class to load

2007-02-10  Arno Rehn  <arno@arnorehn.de>

	* If the aboutToQuit() signal is catched, no destructors will be called.
	  Replaces the check for qApp == 0. No warning about QSocketNotifiers at
	  the end of the main event loop anymore.

2007-02-10  Richard Dale  <rdale@foton.es>

	* Improved debug messages in SmokeInvocation.cs
	* The csrcc tool nearly works, but Qt.Q_INIT_RESOURCE() can't find the
	  class where the resource is.

2007-02-09  Arno Rehn  <arno@arnorehn.de>

	* When a qApp instance was destroyed, it would automatically destroy all
	  other Qt objects, in some cases our own destructor calls could interfere
	  with this mechanism. Fixed by checking if qApp == 0 and if so skipping
	  the destructor calls.

2007-02-09  Richard Dale  <rdale@foton.es>

	* Renamed CreateStrongReference() as IsInstanceContained()
	* Added 'csrcc', a C# version of the Qt rcc tool
	* Added the graphicsview/collidingmice example
	* Fixed code generation of the csrcc tool, and added a static
	  constructor
	* Added a cmake rule for a ${CSRCC_PATH} variable

2007-02-08  Arno Rehn  <arno@arnorehn.de>

	* Made destructors work. The only problem was that we have to check
	  if the instance of which a method should be invoked still exists.
	  This was not the case, e.g. if the QApplication instance was destroyed
	  at the end of an app and with it all other Qt instances.
	  Now the DeleteQApp-Hack isn't needed anymore, too.

2007-02-08  Richard Dale  <rdale@foton.es>

	* Added a first attempt at setting up the strongReferenceMap and calling
	  destructors. A boolean function CreateStrongReference() checks whether