@@ -7,6 +7,7 @@
 	  a destructor for instances where it is false, as the C++ side will
 	  delete the instance.
 	* Q_INIT_RESOURCE() now correctly finds the resource class to load
+	* Added QT_TRANSLATE_NOOP() and QT_TR_NOOP() methods
 
 2007-02-10  Arno Rehn  <arno@arnorehn.de>
 
